[gd_scene load_steps=14 format=3 uid="uid://c53gmymolr23u"]

[ext_resource type="Script" path="res://scenes/enemies/enemy.gd" id="1_2kq0b"]
[ext_resource type="PackedScene" uid="uid://ddtj8kqkup2gn" path="res://scenes/components/flip_2d.tscn" id="2_7f8vj"]
[ext_resource type="PackedScene" uid="uid://dvsrfwsjm0ejv" path="res://scenes/components/hitbox.tscn" id="3_a1l7d"]
[ext_resource type="PackedScene" uid="uid://d3e5wwkxukfgt" path="res://scenes/components/hurtbox.tscn" id="3_an6mj"]

[sub_resource type="Gradient" id="Gradient_787ac"]
colors = PackedColorArray(0.0624614, 0.00736692, 1.50409e-09, 1, 0.81502, 1.01075e-06, 1.92523e-07, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_kvcpe"]
gradient = SubResource("Gradient_787ac")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqgik"]
size = Vector2(73, 95)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vrsvm"]
radius = 32.0
height = 96.0

[sub_resource type="Animation" id="Animation_e4lyd"]
resource_name = "idle"
loop_mode = 1

[sub_resource type="Animation" id="Animation_36tqm"]
resource_name = "attack"
length = 0.5

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l3b83"]
_data = {
"attack": SubResource("Animation_36tqm"),
"idle": SubResource("Animation_e4lyd")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_t2uqc"]
radius = 269.03

[sub_resource type="RectangleShape2D" id="RectangleShape2D_roskk"]
size = Vector2(64, 95)

[node name="enemy" type="CharacterBody2D" groups=["damageable", "enemy"]]
collision_layer = 4
script = ExtResource("1_2kq0b")

[node name="flip2d" parent="." instance=ExtResource("2_7f8vj")]

[node name="Sprite2D" type="Sprite2D" parent="flip2d"]
position = Vector2(0, -48)
scale = Vector2(0.25, 96)
texture = SubResource("GradientTexture1D_kvcpe")

[node name="attack" parent="flip2d" node_paths=PackedStringArray("host") instance=ExtResource("3_a1l7d")]
host = NodePath("../..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="flip2d/attack"]
position = Vector2(36.5, -48.5)
shape = SubResource("RectangleShape2D_hqgik")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -48)
shape = SubResource("CapsuleShape2D_vrsvm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("")
libraries = {
"": SubResource("AnimationLibrary_l3b83")
}

[node name="detectionrange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectionrange"]
position = Vector2(-1, -52)
shape = SubResource("CircleShape2D_t2uqc")

[node name="attack" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack"]
position = Vector2(0, -54.5)
shape = SubResource("RectangleShape2D_hqgik")

[node name="healthLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "0"

[node name="Hurtbox" parent="." node_paths=PackedStringArray("host") instance=ExtResource("3_an6mj")]
collision_mask = 2
host = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -48.5)
shape = SubResource("RectangleShape2D_roskk")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="detectionrange" to="." method="_on_detectionrange_body_entered"]
